infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photo-classification
  labels:
    name: photo-classification
